--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -1,15 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/spacing_tiny"
     >
 
-    <TextView
-        android:id="@+id/tv_description"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="?android:selectableItemBackground"
+        android:orientation="horizontal"
         />
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:padding="@dimen/spacing_tiny"
+        android:background="@android:color/white"
+        >
+
+        <ImageView
+            android:id="@+id/iv_place"
+            android:layout_width="@dimen/view_size_normal"
+            android:layout_height="@dimen/view_size_normal"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_location_place"
+            />
+
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/iv_place"
+            android:textStyle="bold"
+            android:textSize="@dimen/font_size_normal"
+            tools:text="Address"
+            />
+
+        <TextView
+            android:id="@+id/tv_extra_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/iv_place"
+            android:layout_below="@id/tv_address"
+            tools:text="Extra"
+            />
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
