--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,12 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="font_size_normal">20sp</dimen>
+
+    <dimen name="view_size_normal">50dp</dimen>
+    <dimen name="view_size_huge">250dp</dimen>
+
+    <dimen name="spacing_small">15dp</dimen>
+    <dimen name="spacing_tiny">10dp</dimen>
 </resources>
